# eggsmaker-web

./: .directory  backend.py  eggsmaker-web.desktop  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  uninstall.sh  version.py
Readme Install/: GUIA_PRIMERA_INSTALACION.md  GUIA_PRIMERA_INSTALACION_EN.md  GUIA_PRIMERA_INSTALACION_IT.md  GUIA_PRIMERA_INSTALACION_PT.md  feedback.txt
Readme Use/: GUIA_DE_USO.md  GUIA_DE_USO_EN.md  GUIA_DE_USO_IT.md  GUIA_DE_USO_PT.md
