[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "eggsmaker-web"
dynamic = ["version"]
description = "Graphical interface for Penguins' Eggs ISO creator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Jorge Luis Endres", email = "jorge@example.com"},
]
keywords = ["linux", "iso", "creator", "penguins-eggs", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Installation/Setup",
]

dependencies = [
    "nicegui>=1.4.0",
    "psutil>=5.9.0",
    "distro>=1.8.0",
]

[project.scripts]
eggsmaker-web-py = "main:main"

[project.urls]
Homepage = "https://github.com/pieroproietti/penguins-eggs"
Documentation = "https://github.com/pieroproietti/penguins-eggs"
Repository = "https://github.com/pieroproietti/penguins-eggs"

[tool.setuptools]
script-files = ["bin/eggsmaker-web"]

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*", ".venv*", "__pycache__*"]

[tool.setuptools.package-data]
"*" = ["assets/*", "*.desktop", "*.sh"]
